--- a/weatherNewsSub1.html
+++ b/weatherNewsSub1.html
@@ -33,6 +33,10 @@
     }
     .ads{
         margin-top: 20px;
+        display:flex;
+        justify-content: center; 
+        flex-wrap: wrap;
+        
     }
     .list-unstyled{
         border:none;
@@ -113,32 +117,30 @@
         <div class="container-md">
             <div class="row">
                 <div class="ads">
-                    <ul class="list-unstyled ">
-                        <li class="card border border-danger">
-                            <div class="card-body">
-                                <a href="#">
-                                    <h5 class="card-title">Islip islip</h5>
-                                </a>
-                                <p class="card-text">sahgdsaghdgasjdgajs</p>
-                            </div>
-                        </li>
-                        <li class="card border border-danger">
-                            <div class="card-body">
-                                <a href="#">
-                                    <h5 class="card-title">Hi hi hi</h5>
-                                </a>
-                                <p class="card-text">sahgdsaghdgasjdgajs</p>
-                            </div>
-                        </li>
-                        <li class="card border border-danger">
-                            <div class="card-body">
-                                <a href="#">
-                                    <h5 class="card-title">Hello hello</h5>
-                                </a>
-                                <p class="card-text">sahgdsaghdgasjdgajs</p>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
