--- a/sportsNewsSub1.html
+++ b/sportsNewsSub1.html
@@ -62,7 +62,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h1>Latest Chika</h1>
+                    <h1>Latest Sports</h1>
                     <div class="card-body">
                         <img src="assets/john_pic4.jpg" class="img-fluid mb-3" width="100%">
                         <h6 class="card-title">12:51 and i thought my feelings were gone</h6>
