--- a/shobizNewsSub1.html
+++ b/shobizNewsSub1.html
@@ -80,6 +80,12 @@
                 </div>
             </div>
             <div class="col-12 col-md-3">
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Active</a>
+                    </li>
+                </ul>
+                <br>
                 <div class="ads">
                     <ul class="card list-unstyled">
                         <li class="list-group-item news1"><img src="assets/john_pic4.jpg" class="img-fluid" width="100%">
