--- a/latestNewsSub1.html
+++ b/latestNewsSub1.html
@@ -13,7 +13,7 @@
     .social-icon-container {
         justify-content: center;
         align-items: center;
-        margin-top: 100px;
+        margin-top: 390px;
     }
 
     .social-icon {
@@ -234,7 +234,7 @@
                 <div class="col">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" style="font-size: 20px;">Local News</a>
+                            <a class="nav-link active" aria-current="page" href="#" style="font-size: 20px;">Nation News Update</a>
                         </li>
                     </ul>
                     <br>
