--- a/latestNewsSub2.html
+++ b/latestNewsSub2.html
@@ -174,8 +174,8 @@
                     <h1>P7.01 million shabu, P3.1 million kush seized</h1>
                     <p>Ramon Efren Lazaro, Emmanuel Tupas | May 15, 2024 | 12:00am</p>
                     <div class="card-body">
-                        <img src="assets/WhatsApp-Image-2024-05-15-at-05.46.23.jpeg" class="img-fluid mb-3" width="100%">
-                        <p class="card-text"><b>Small fishing boats assemble in the port of Barangay Matalvis in Masinloc town, Zambales, to participate in the civilian convoy in Scarborough Shoal. INQUIRER.net/John Eric Mendoza</b>
+                        <img src="assets/7-2_2024-05-14_20-13-46.jpg" class="img-fluid mb-3" width="100%">
+                        <p class="card-text"><b>Stock image of methamphetamine.</b>
                         <div class="text">
                             <p><b>MANILA, Philippines</b> — Anti-narcotics agents confiscated 1.03 kilos of shabu with an estimated street value of P7.01 million in Dumaguete City yesterday.
 
