--- a/latestNewsSub1.html
+++ b/latestNewsSub1.html
@@ -172,7 +172,7 @@
                 <div class="news">
                     <h4><span class="badge text-bg-danger">LOCAL NEWS</span></h4>
                     <h1>‘Hope for best, prepared for worst’: Scarborough civilian convoy starts</h1>
-                    <p>By: John Eric Mendoza - Reporter / 07:26 AM May 15, 2024</p>
+                    <p>By: John Eric Mendoza - Reporter | 07:26 AM May 15, 2024</p>
                     <div class="card-body">
                         <img src="assets/WhatsApp-Image-2024-05-15-at-05.46.23.jpeg" class="img-fluid mb-3" width="100%">
                         <p class="card-text"><b>Small fishing boats assemble in the port of Barangay Matalvis in Masinloc town, Zambales, to participate in the civilian convoy in Scarborough Shoal. INQUIRER.net/John Eric Mendoza</b>
@@ -264,7 +264,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-8"> 
-                                        <a href="#">
+                                        <a href="latestNewsSub2.html">
                                             <h6><span style="font-size: 12px;" class="badge">INCIDENT NEWS</span></h6>
                                             <h5 class="card-title">P7.01 million shabu, P3.1 million kush seized</h5>
                                         </a>
@@ -275,7 +275,7 @@
                                             The illegal drugs were recovered from an alias Aldwyn, who was arrested in Barangay Candau-ay, Central Visayas police director Brig. Gen. Anthony Aberin said.
                                             
                                             Police said the suspect, who was not identified, can sell up to 100 grams of shabu per day in Dumaguete and Amlan town.</p>
-                                        <a href="#" class="btn btn-link">Read more</a>
+                                        <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
                                     </div>
                                     <div class="col-md-4"> 
                                         <img src="assets/7-2_2024-05-14_20-13-46.jpg" class="img-fluid" alt="Image">
