--- a/latestNewsSub2.html
+++ b/latestNewsSub2.html
@@ -235,29 +235,6 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-8"> 
-                                        <a href="#">
-                                            <h6><span style="font-size: 12px;" class="badge">INCIDENT NEWS</span></h6>
-                                            <h5 class="card-title">P7.01 million shabu, P3.1 million kush seized</h5>
-                                        </a>
-                                        <p style="font-size: 18px;">Ramon Efren Lazaro, Emmanuel Tupas | May 15, 2024 | 12:00am</p>
-                                        <br>
-                                        <p style="font-size: 16px;text-align: justify;" class="card-text"><b>MANILA, Philippines</b> — Anti-narcotics agents confiscated 1.03 kilos of shabu with an estimated street value of P7.01 million in Dumaguete City yesterday.
-
-                                            The illegal drugs were recovered from an alias Aldwyn, who was arrested in Barangay Candau-ay, Central Visayas police director Brig. Gen. Anthony Aberin said.
-                                            
-                                            Police said the suspect, who was not identified, can sell up to 100 grams of shabu per day in Dumaguete and Amlan town.</p>
-                                        <a href="#" class="btn btn-link">Read more</a>
-                                    </div>
-                                    <div class="col-md-4"> 
-                                        <img src="assets/7-2_2024-05-14_20-13-46.jpg" class="img-fluid" alt="Image">
-                                    </div>
-                                </div>
-                            </div>                            
-                        </div>
-                        <div class="card border border-danger">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-md-8"> 
                                         <h6><span style="font-size: 12px;" class="badge">CURRENT NEWS</span></h6>
                                         <a href="#">
                                             <h5 class="card-title">DFA probes ‘illegal’ activities by diplomats</h5>
@@ -271,6 +248,27 @@
                                     </div>
                                     <div class="col-md-4"> 
                                         <img src="assets/dfa-hq_2024-05-13_15-58-33.jpg" class="img-fluid" alt="Image">
+                                    </div>
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="card border border-danger">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-8"> 
+                                        <a href="#">
+                                            <h6><span style="font-size: 12px;" class="badge">LOCAL NEWS</span></h6>
+                                            <h5 class="card-title">‘Hope for best, prepared for worst’: Scarborough civilian convoy starts</h5>
+                                        </a>
+                                        <p style="font-size: 18px;">John Eric Mendoza - Reporter | 07:26 AM May 15, 2024</p>
+                                        <br>
+                                        <p style="font-size: 16px;text-align: justify;" class="card-text"><b>MASINLOC, Zambales</b> — The civilian convoy for the West Philippine Sea officially embarked on a voyage to Scarborough (Panatag) Shoal early Wednesday morning on a mission that may witness another attempt by China to disrupt the activity.
+
+                                            Over a hundred fisherfolk, along with Atin Ito coalition volunteers, journalists, and foreign observers, all clad with life jackets, started to depart from the port here at Barangay Matalvis at 7:26 a.m.</p>
+                                        <a href="#" class="btn btn-link">Read more</a>
+                                    </div>
+                                    <div class="col-md-4"> 
+                                        <img src="assets/WhatsApp-Image-2024-05-15-at-05.46.23.jpeg" class="img-fluid" alt="Image">
                                     </div>
                                 </div>
                             </div>                            
