--- a/latestNewsSub2.html
+++ b/latestNewsSub2.html
@@ -256,7 +256,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-8"> 
-                                        <a href="#">
+                                        <a href="latestNewsSub1.html">
                                             <h6><span style="font-size: 12px;" class="badge">LOCAL NEWS</span></h6>
                                             <h5 class="card-title">‘Hope for best, prepared for worst’: Scarborough civilian convoy starts</h5>
                                         </a>
@@ -265,7 +265,7 @@
                                         <p style="font-size: 16px;text-align: justify;" class="card-text"><b>MASINLOC, Zambales</b> — The civilian convoy for the West Philippine Sea officially embarked on a voyage to Scarborough (Panatag) Shoal early Wednesday morning on a mission that may witness another attempt by China to disrupt the activity.
 
                                             Over a hundred fisherfolk, along with Atin Ito coalition volunteers, journalists, and foreign observers, all clad with life jackets, started to depart from the port here at Barangay Matalvis at 7:26 a.m.</p>
-                                        <a href="#" class="btn btn-link">Read more</a>
+                                        <a href="latestNewsSub1.html" class="btn btn-link">Read more</a>
                                     </div>
                                     <div class="col-md-4"> 
                                         <img src="assets/WhatsApp-Image-2024-05-15-at-05.46.23.jpeg" class="img-fluid" alt="Image">
