--- a/latestNewsSub1.html
+++ b/latestNewsSub1.html
@@ -244,7 +244,7 @@
                                 <div class="row">
                                     <div class="col-md-8"> 
                                         <h6><span style="font-size: 12px;" class="badge">FLASH REPORT</span></h6>
-                                        <a href="#">
+                                        <a href="latestNewsSub3.html">
                                             <h5 class="card-title">SC seeks DoTr response on PISTON-led petition vs PUVMP</h5>
                                         </a>
                                         <p style="font-size: 18px;">Ian Laqui | May 15, 2024 | 10:10am</p>
@@ -252,7 +252,7 @@
                                         <p style="font-size: 16px;text-align: justify;" class="card-text"><b>MANILA, Philippines</b> — The Supreme Court has required the Department of Transportation (DOTr) to comment on the petition filed by progressive transport group Pagkakaisa ng mga Samahan ng Tsuper at Operator Nationwide (PISTON), assailing the constitutionality of the public utility vehicle modernization program (PUVMP). 
 
                                             The order follows the resumption of the Supreme Court's en banc session on Tuesday, happening shortly after the high court ended its decision-writing period on May 10.</p>
-                                        <a href="#" class="btn btn-link">Read more</a>
+                                        <a href="latestNewsSub3.html" class="btn btn-link">Read more</a>
                                     </div>
                                     <div class="col-md-4"> 
                                         <img src="assets/manibela-transport-strike_2024-05-15_10-10-57.jpg" class="img-fluid" alt="Image">
