--- a/latestNewsSub2.html
+++ b/latestNewsSub2.html
@@ -214,27 +214,6 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-8"> 
-                                        <h6><span style="font-size: 12px;" class="badge">FLASH REPORT</span></h6>
-                                        <a href="#">
-                                            <h5 class="card-title">SC seeks DoTr response on PISTON-led petition vs PUVMP</h5>
-                                        </a>
-                                        <p style="font-size: 18px;">Ian Laqui | May 15, 2024 | 10:10am</p>
-                                        <br>
-                                        <p style="font-size: 16px;text-align: justify;" class="card-text"><b>MANILA, Philippines</b> — The Supreme Court has required the Department of Transportation (DOTr) to comment on the petition filed by progressive transport group Pagkakaisa ng mga Samahan ng Tsuper at Operator Nationwide (PISTON), assailing the constitutionality of the public utility vehicle modernization program (PUVMP). 
-
-                                            The order follows the resumption of the Supreme Court's en banc session on Tuesday, happening shortly after the high court ended its decision-writing period on May 10.</p>
-                                        <a href="#" class="btn btn-link">Read more</a>
-                                    </div>
-                                    <div class="col-md-4"> 
-                                        <img src="assets/manibela-transport-strike_2024-05-15_10-10-57.jpg" class="img-fluid" alt="Image">
-                                    </div>
-                                </div>
-                            </div>                            
-                        </div>
-                        <div class="card border border-danger">
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-md-8"> 
                                         <h6><span style="font-size: 12px;" class="badge">CURRENT NEWS</span></h6>
                                         <a href="#">
                                             <h5 class="card-title">DFA probes ‘illegal’ activities by diplomats</h5>
@@ -248,6 +227,27 @@
                                     </div>
                                     <div class="col-md-4"> 
                                         <img src="assets/dfa-hq_2024-05-13_15-58-33.jpg" class="img-fluid" alt="Image">
+                                    </div>
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="card border border-danger">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-8"> 
+                                        <h6><span style="font-size: 12px;" class="badge">FLASH REPORT</span></h6>
+                                        <a href="latestNewsSub3.html">
+                                            <h5 class="card-title">SC seeks DoTr response on PISTON-led petition vs PUVMP</h5>
+                                        </a>
+                                        <p style="font-size: 18px;">Ian Laqui | May 15, 2024 | 10:10am</p>
+                                        <br>
+                                        <p style="font-size: 16px;text-align: justify;" class="card-text"><b>MANILA, Philippines</b> — The Supreme Court has required the Department of Transportation (DOTr) to comment on the petition filed by progressive transport group Pagkakaisa ng mga Samahan ng Tsuper at Operator Nationwide (PISTON), assailing the constitutionality of the public utility vehicle modernization program (PUVMP). 
+
+                                            The order follows the resumption of the Supreme Court's en banc session on Tuesday, happening shortly after the high court ended its decision-writing period on May 10.</p>
+                                        <a href="latestNewsSub3.html" class="btn btn-link">Read more</a>
+                                    </div>
+                                    <div class="col-md-4"> 
+                                        <img src="assets/manibela-transport-strike_2024-05-15_10-10-57.jpg" class="img-fluid" alt="Image">
                                     </div>
                                 </div>
                             </div>                            
