--- a/latestNewsSub1.html
+++ b/latestNewsSub1.html
@@ -288,7 +288,7 @@
                                 <div class="row">
                                     <div class="col-md-8"> 
                                         <h6><span style="font-size: 12px;" class="badge">CURRENT NEWS</span></h6>
-                                        <a href="#">
+                                        <a href="latestNewsSub4.html">
                                             <h5 class="card-title">DFA probes ‘illegal’ activities by diplomats</h5>
                                         </a>
                                         <p style="font-size: 18px;">Philstar.com | May 13, 2024 | 4:25pm</p>
@@ -296,7 +296,7 @@
                                         <p style="font-size: 16px;text-align: justify;" class="card-text"><b>MANILA, Philippines</b> — The Department of Foreign Affairs (DFA) said on Monday it would investigate alleged illegal activities by foreign diplomats, following calls to probe China’s possible violation of Philippine laws over a phone call recording. 
 
                                             “The Department of Foreign Affairs will look into any reports of illegal and unlawful activities by diplomatic officials, and undertake necessary action in line with existing laws and regulations,” the DFA said. </p>
-                                        <a href="#" class="btn btn-link">Read more</a>
+                                        <a href="latestNewsSub4.html" class="btn btn-link">Read more</a>
                                     </div>
                                     <div class="col-md-4"> 
                                         <img src="assets/dfa-hq_2024-05-13_15-58-33.jpg" class="img-fluid" alt="Image">
