--- a/showbizNewsSub1.html
+++ b/showbizNewsSub1.html
@@ -132,6 +132,12 @@
     }
     h5{
         font-size: 18px;
+        color:#000;
+        text-align: justify;
+    }
+    h5:hover{
+        font-size: 18px;
+        color:#cc2d2d;
     }
     
 
@@ -198,17 +204,21 @@
                     </ul>
                     <br>
                     <ul class="card list-unstyled">
+                        <li class="list-group-item">
+                            <li class="list-group-item news1"><img src="assets/darren.png" class="img-fluid" width="100%">
+                                <a href="#"><h5>'Tao Po': Darren Espanto, may isa pang pangarap na gustong matupad</h5></a>
+                                <p style="font-size: 11px;">May 15, 2024 | 01:07pm</p>
+                            </li>
+                        </li>
+                        <li class="list-group-item">
+                            <li class="list-group-item news1"><img src="assets/ent1-alden-richards-kathryn-bernardo-3_2019-08-14_17-39-51.jpg" class="img-fluid" width="100%">
+                                <a href="#"><h5>Kathryn Bernardo, Alden Richards hailed Box Office Queen, King </h5></a>
+                                <p style="font-size: 11px;">May 14, 2024 | 10:05am</p>
+                            </li>
+                        </li>
                         <li class="list-group-item news1"><img src="assets/nino-muhlach-boss-toyo_2024-05-14_14-29-02.jpg" class="img-fluid" width="100%">
                             <a href="#"><h5>Nino Muhlach sells FAMAS trophy to Boss Toyo </h5></a>
                             <p style="font-size: 11px;">May 14, 2024 | 2:28pm</p>
-                        </li>
-                        <li class="list-group-item"><img src="assets/john_pic4.jpg" class="img-fluid" width="100%">
-                            <a href="#"><h5>Hi hi hi</h5></a>
-                            <p>sahgdsaghdgasjdgajs</p>
-                        </li>
-                        <li class="list-group-item"><img src="assets/john_pic4.jpg" class="img-fluid" width="100%">
-                            <a href="#"><h5>Hello hello</h5></a>
-                            <p>sahgdsaghdgasjdgajs</p>
                         </li>
                     </ul>
                 </div>
