--- a/showbizNewsSub1.html
+++ b/showbizNewsSub1.html
@@ -212,7 +212,7 @@
                         </li>
                         <li class="list-group-item">
                             <li class="list-group-item news1"><img src="assets/ent1-alden-richards-kathryn-bernardo-3_2019-08-14_17-39-51.jpg" class="img-fluid" width="100%">
-                                <a href="#"><h5>Kathryn Bernardo, Alden Richards hailed Box Office Queen, King </h5></a>
+                                <a href="showbizNewsSub3.html"><h5>Kathryn Bernardo, Alden Richards hailed Box Office Queen, King </h5></a>
                                 <p style="font-size: 11px;">May 14, 2024 | 10:05am</p>
                             </li>
                         </li>
