--- a/showbizNewsSub1.html
+++ b/showbizNewsSub1.html
@@ -139,6 +139,31 @@
         font-size: 18px;
         color:#cc2d2d;
     }
+    .news1 {
+        align-items: center;
+        padding: 10px;
+        border: 1px solid #ccc;
+        margin-bottom: 10px;
+    }
+
+    .news1 img {
+        width: 1000px; 
+        height: auto;
+        margin-right: 10px;
+        border-radius: 5px;
+    }
+
+    .news1 h5 {
+        margin: 0;
+        font-size: 18px;
+        color: #333;
+    }
+
+    .news1 p {
+        margin: 5px 0;
+        font-size: 14px;
+        color: #666;
+    }
     
 
 </style>
