--- a/showbizNewsSub1.html
+++ b/showbizNewsSub1.html
@@ -242,7 +242,7 @@
                             </li>
                         </li>
                         <li class="list-group-item news1"><img src="assets/nino-muhlach-boss-toyo_2024-05-14_14-29-02.jpg" class="img-fluid" width="100%">
-                            <a href="#"><h5>Nino Muhlach sells FAMAS trophy to Boss Toyo </h5></a>
+                            <a href="showbizNewsSub4.html"><h5>Nino Muhlach sells FAMAS trophy to Boss Toyo </h5></a>
                             <p style="font-size: 11px;">May 14, 2024 | 2:28pm</p>
                         </li>
                     </ul>
