--- a/showbizNewsSub1.html
+++ b/showbizNewsSub1.html
@@ -158,6 +158,12 @@
         font-size: 18px;
         color: #333;
     }
+    
+    .news1 h5:hover {
+        margin: 0;
+        font-size: 18px;
+        color: #cc2d2d;
+    }
 
     .news1 p {
         margin: 5px 0;
