--- a/showbizNewsSub4.html
+++ b/showbizNewsSub4.html
@@ -160,6 +160,12 @@
         color: #333;
     }
 
+    .news1 h5:hover {
+        margin: 0;
+        font-size: 18px;
+        color: #cc2d2d;
+    }
+
     .news1 p {
         margin: 5px 0;
         font-size: 14px;
