--- a/sportsNewsSub1.html
+++ b/sportsNewsSub1.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local News</title>
+    <title>Sports</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap');
     .social-icon-container {
         justify-content: center;
         align-items: center;
@@ -50,6 +51,103 @@
     .side{
         margin-top: 80px;
     }
+    .list-unstyled{
+        border:none;
+    }
+    .class-body p{
+        text-align: justify;
+        font-size: 15px;
+    }
+    a{
+        text-decoration: none;
+    }
+    .text{
+        text-align: justify;
+    }
+    .nav-tabs {
+        border-bottom: 2px solid #000; 
+    }
+
+    .nav-tabs .nav-item {
+        margin-bottom: 10px; 
+    }
+
+    .nav-tabs .nav-link {
+        border: none;
+        border-radius: 20px; 
+        padding: 10px 20px; 
+        color: #000; 
+        transition: background-color 0.3s, color 0.3s; 
+    }
+
+    .nav-tabs .nav-item.show .nav-link,
+    .nav-tabs .nav-link.active {
+        background-color: #000; 
+        color: #fff; 
+    }
+   .nav-link:hover {
+        background-color: #f0f0f0;
+        color: #000; 
+    }
+    h1{
+        font-family: 'Swap';
+        font-weight: bold;
+        font-size: 45px;
+    }
+    h3{
+        font-family: 'Swap';
+    }
+    
+    p{
+        font-family: 'Swap';
+        font-size: 20px;
+    }
+    .card-text {
+        font-size: 1rem;
+        margin-bottom: 35px;
+    }
+    .card-title{
+        text-align: left;
+        color: #000;
+        font-weight: bold;
+        font-size: 30px;
+    }
+    .card-title:hover{
+        text-align: left;
+        color: #cc2d2d;
+        font-weight: bold;
+        font-size: 30px;
+    }
+    .btn{
+        color:#cc2d2d;
+    }
+    .badge {
+        display: inline-block;
+        padding: 0.25em 0.5em;
+        font-size: 1.3rem;
+        font-weight: 600; 
+        line-height: 1.5; 
+        text-transform: uppercase; 
+        border-radius: 0.5rem; 
+        background-color: #dc3545; 
+        color: #fff; 
+    }
+
+    h4 {
+        text-align: left;
+    }
+
+
+    .text-bg-danger {
+        background-color: #dc3545; 
+        color: #fff;
+    }
+
+    .larger-image {
+        width: 800px !important;
+    }
+
+
 
 </style>
 <body>
@@ -65,19 +163,26 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h1>Latest Sports</h1>
+                    <h4><span class="badge text-bg-danger">SPORTS</span></h4>
+                    <h1>Belen, Solomon take charge as National U clinches UAAP Season 86 women’s volleyball title</h1>
+                    <p>By: Rom Anzures | May 15, 2024 | 07:58pm</p>
                     <div class="card-body">
-                        <img src="assets/john_pic4.jpg" class="img-fluid mb-3" width="100%">
-                        <h6 class="card-title">12:51 and i thought my feelings were gone</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <img src="assets/1715773919420IMG_3888.jpeg" class="img-fluid mb-3" width="100%">
+                        <p class="card-text">NU’s Bella Belen. Photo from UAAP Media.</p>
                         <div class="text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid, accusamus libero cupiditate doloribus sint facere aut neque nulla recusandae 
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid, accusamus libero cupiditate doloribus sint facere aut neque nulla recusandae 
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid, accusamus libero cupiditate doloribus sint facere aut neque nulla recusandae </p>
+                            <p><b>MANILA</b> - National University are UAAP women’s volleyball champions yet again.</p>
                           
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid, accusamus libero cupiditate doloribus sint facere aut neque nulla recusandae 
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid, accusamus libero cupiditate doloribus sint facere aut neque nulla recusandae 
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aliquid, accusamus libero cupiditate doloribus sint facere aut neque nulla recusandae </p>
+                            <p>The Lady Bulldogs clinched their fourth league title -- and second in three seasons -- after they defeated University of Santo in a four-set thriller, 25-23, 23-25, 27-25, 25-16, during their Season 86 Finals Game 2 faceoff on Wednesday at the Mall of Asia Arena in Pasay City.</p>
+
+                            <p>After both teams each earned wins in the first two sets, the Norman Miguel-coached team figured in a close encounter in the third after Xyza Gula, Jonna Perdido, Alyssa Solomon, Bella Belen, and Vange Alinsug exchanged hits in the frame.</p>
+
+                            <p>NU then saw themselves down by a point, 25-24, but the freshly crowned Season 86 MVP took charge as she brought them to set point, 26-25, after an off-the-block kill.</p>
+
+                            <p>In the next play, Sheena Toring finally dashed the third set after she scored through a block on Gula. </p>
+
+                            <p>The Lady Bulldogs leaned on this momentum in the fourth and were able to build a 17-12 lead all thanks to the efforts of Belen as well as the costly errors of the Golden Tigresses, and this advantage proved to be enough as they finally reclaimed the championship after failing to defend it last season. </p>
+
+                            <p>This is also the first time ever that National U won both men’s and women’s volleyball titles in the same season, and they are the first UAAP squad to do the feat since Ateneo de Manila University in Season 77.</p>
                         </div>
                     </div>
                 </div>
@@ -85,18 +190,20 @@
             <div class="col-12 col-md-3 side"> 
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        <a class="nav-link active" aria-current="page" href="#">Sports News</a>
                     </li>
                 </ul>
                 <br>
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4 d-flex justify-content-center align-items-center">
-                            <img src="assets/tugon_pres.jpg" class="pic img-fluid rounded border border-dark" alt="...">
+                            <img src="assets/1715770457867PBA Images9.jpg" class="pic img-fluid rounded border border-dark larger-image">
+
+
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">sporty</h5>
+                                <a href="#"><h5 class="card-title">sporty</h5></a>
                                 <p class="card-text"></p>
                                 <p class="card-text"><small class="text-body-secondary">jhjhj</small></p>
                             </div>
@@ -111,7 +218,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Another Title</h5>
+                                <a href="#"><h5 class="card-title">sporty</h5></a>
                                 <p class="card-text">Content for the second card.</p>
                                 <p class="card-text"><small class="text-body-secondary">Another metadata</small></p>
                             </div>
@@ -126,7 +233,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Third Title</h5>
+                                <a href="#"><h5 class="card-title">sporty</h5></a>
                                 <p class="card-text">Content for the third card.</p>
                                 <p class="card-text"><small class="text-body-secondary">Third metadata</small></p>
                             </div>
