--- a/sportsNewsSub2.html
+++ b/sportsNewsSub2.html
@@ -260,7 +260,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <a href="#"><h6 class="card-title">PBA: San Miguel avoids upset, ousts TerraFirma for semis spot</h6></a>
+                                <a href="sportsNewsSub3.html"><h6 class="card-title">PBA: San Miguel avoids upset, ousts TerraFirma for semis spot</h6></a>
                                 <p class="card-text"><small class="text-body-secondary" style="font-size: 0.8em;">May 15, 2024 | 06:56 PM</small></p>
                             </div>
                         </div>
