--- a/sportsNewsSub2.html
+++ b/sportsNewsSub2.html
@@ -201,7 +201,7 @@
 
                             <p>Olympics organizers are determined to put on a show that stuns the throngs assembled on the boulevards of Paris, not to mention the millions of people expected to watch the Games unfold on their televisions and mobile devices. If the surge of enthusiasm for the Super Bowl, Taylor Swift, March Madness and the solar eclipse is any guide, then audiences are craving spectacle — and the Paris Games could be just the ticket.</p>
 
-                            <b>Going for Gold</b>
+                            <p><b>Going for Gold</b></p>
 
                             <p>The scale of the Paris Games is immense: nearly 40 sports and more than 300 events hosted in at least 35 venues in Paris and other cities across metropolitan France. Following two Games that were hampered by Covid protocols and other tight restrictions, Paris could resemble a colossal international party, heralded by five Olympic rings (fashioned from recycled French steel) that will be displayed on the south side of the Eiffel Tower.</p>
                             
@@ -218,7 +218,7 @@
 
                             <br><br>
 
-                            <b>The final strech</b>
+                            <p><b>The final stretch</b></p>
 
                             <p>In recent months, preparations for the Games have arguably been overshadowed by the grinding realities of war and humanitarian disaster. Paris 2024 is just the latest in a long line of Olympic Games that have taken place against a backdrop of geopolitical turmoil, according to Wallechinsky, who pointed to several key examples.</p>
                             <p>In the lead-up to the Paris Games, France announced it would deploy 45,000 police, military officers and army troops across the country. The country has requested reinforcements from 46 foreign partners — a “classic approach adopted by host countries when organizing major international events,” the Interior Ministry has said. Everyone involved in the Games — security officials, building workers, volunteers — will be put through background checks, too.</p>
