--- a/sportsNewsSub3.html
+++ b/sportsNewsSub3.html
@@ -191,7 +191,7 @@
                                 
                                 San Miguel will play the winner of the quarterfinals series against TNT and Rain or Shine in the best-of-seven semis.</p>
                             <br>
-                            <b>The Scores</b>
+                            <p><b>The Scores</b></p>
                             <p><b>SAN MIGUEL 110</b>- Fajardo 25, Romeo 19, Perez 18, Trollano 18, Cruz 11, Lassiter 8, Ross 5, Tautuaa 4, Brondial 2, Enciso 0</p>
                             <p><b>TERRAFIRMA 91</b>- Gomez de Liano 23, Holt 18, Tiongson 18, Cahilig 12, Go 7, Camson 7, Carino 4, Ramos 2, Alolino 0, Mina 0, Sangalang 0</p>
                             <p><b>QUARTERS</b>-  20-25, 45-44, 79-66, 110-91</p>
